--- a/ch03/01_main-chapter-code/ch03.ipynb
+++ b/ch03/01_main-chapter-code/ch03.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 84,
    "id": "e58f33e8-5dc9-4dd5-ab84-5a011fa11d92",
    "metadata": {},
    "outputs": [
@@ -46,7 +46,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch version: 2.4.0\n"
+      "torch version: 2.8.0\n"
      ]
     }
    ],
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 85,
    "id": "22b9556a-aaf8-4ab4-a5b4-973372b0b2c3",
    "metadata": {},
    "outputs": [],
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 86,
    "id": "6fb5b2f8-dd2c-4a6d-94ef-a0e9ad163951",
    "metadata": {},
    "outputs": [
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 87,
    "id": "9842f39b-1654-410e-88bf-d1b899bf0241",
    "metadata": {},
    "outputs": [
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 88,
    "id": "e3ccc99c-33ce-4f11-b7f2-353cf1cbdaba",
    "metadata": {},
    "outputs": [
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 89,
    "id": "07b2e58d-a6ed-49f0-a1cd-2463e8d53a20",
    "metadata": {},
    "outputs": [
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 90,
    "id": "2d99cac4-45ea-46b3-b3c1-e000ad16e158",
    "metadata": {},
    "outputs": [
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 91,
    "id": "8fcb96f0-14e5-4973-a50e-79ea7c6af99f",
    "metadata": {},
    "outputs": [
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 92,
    "id": "04004be8-07a1-468b-ab33-32e16a551b45",
    "metadata": {},
    "outputs": [
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 93,
    "id": "2cea69d0-9a47-45da-8d5a-47ceef2df673",
    "metadata": {},
    "outputs": [
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 94,
    "id": "fa4ef062-de81-47ee-8415-bfe1708c81b8",
    "metadata": {},
    "outputs": [
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 95,
    "id": "112b492c-fb6f-4e6d-8df5-518ae83363d5",
    "metadata": {},
    "outputs": [
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 96,
    "id": "ba8eafcf-f7f7-4989-b8dc-61b50c4f81dc",
    "metadata": {},
    "outputs": [
@@ -718,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 97,
    "id": "2570eb7d-aee1-457a-a61e-7544478219fa",
    "metadata": {},
    "outputs": [
@@ -813,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 98,
    "id": "8250fdc6-6cd6-4c5b-b9c0-8c643aadb7db",
    "metadata": {},
    "outputs": [],
@@ -833,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 99,
    "id": "bfd7259a-f26c-4cea-b8fc-282b5cae1e00",
    "metadata": {},
    "outputs": [],
@@ -855,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 100,
    "id": "73cedd62-01e1-4196-a575-baecc6095601",
    "metadata": {},
    "outputs": [
@@ -885,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 101,
    "id": "8c1c3949-fc08-4d19-a41e-1c235b4e631b",
    "metadata": {},
    "outputs": [
@@ -924,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 102,
    "id": "64cbc253-a182-4490-a765-246979ea0a28",
    "metadata": {},
    "outputs": [
@@ -952,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 103,
    "id": "b14e44b5-d170-40f9-8847-8990804af26d",
    "metadata": {},
    "outputs": [
@@ -988,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 104,
    "id": "146f5587-c845-4e30-9894-c7ed3a248153",
    "metadata": {},
    "outputs": [
@@ -1024,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 105,
    "id": "e138f033-fa7e-4e3a-8764-b53a96b26397",
    "metadata": {},
    "outputs": [
@@ -1059,7 +1059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 106,
    "id": "51590326-cdbe-4e62-93b1-17df71c11ee4",
    "metadata": {},
    "outputs": [
@@ -1124,7 +1124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 107,
    "id": "73f411e3-e231-464a-89fe-0a9035e5f839",
    "metadata": {},
    "outputs": [
@@ -1132,6 +1132,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "tensor([[-0.0739,  0.0713],\n",
+      "        [-0.0748,  0.0703],\n",
+      "        [-0.0749,  0.0702],\n",
+      "        [-0.0760,  0.0685],\n",
+      "        [-0.0763,  0.0679],\n",
+      "        [-0.0754,  0.0693]], grad_fn=<MmBackward0>)\n",
       "tensor([[-0.0739,  0.0713],\n",
       "        [-0.0748,  0.0703],\n",
       "        [-0.0749,  0.0702],\n",
@@ -1163,7 +1169,14 @@
     "\n",
     "torch.manual_seed(789)\n",
     "sa_v2 = SelfAttention_v2(d_in, d_out)\n",
-    "print(sa_v2(inputs))"
+    "\n",
+    "print(sa_v2(inputs))\n",
+    "\n",
+    "sa_v1.W_query = torch.nn.Parameter(sa_v2.W_query.weight.T)\n",
+    "sa_v1.W_key = torch.nn.Parameter(sa_v2.W_key.weight.T)\n",
+    "sa_v1.W_value = torch.nn.Parameter(sa_v2.W_value.weight.T)\n",
+    "\n",
+    "print(sa_v1(inputs))"
    ]
   },
   {
@@ -1181,6 +1194,14 @@
    "source": [
     "## 3.5 Hiding future words with causal attention"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4c7fab1e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1235,7 +1256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 108,
    "id": "1933940d-0fa5-4b17-a3ce-388e5314a1bb",
    "metadata": {},
    "outputs": [
@@ -1274,7 +1295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 109,
    "id": "43f3d2e3-185b-4184-9f98-edde5e6df746",
    "metadata": {},
    "outputs": [
@@ -1307,7 +1328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 110,
    "id": "9f531e2e-f4d2-4fea-a87f-4c132e48b9e7",
    "metadata": {},
    "outputs": [
@@ -1350,7 +1371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 111,
    "id": "6d392083-fd81-4f70-9bdf-8db985e673d6",
    "metadata": {},
    "outputs": [
@@ -1393,7 +1414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 112,
    "id": "a2be2f43-9cf0-44f6-8d8b-68ef2fb3cc39",
    "metadata": {},
    "outputs": [
@@ -1427,7 +1448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 113,
    "id": "b1cd6d7f-16f2-43c1-915e-0824f1a4bc52",
    "metadata": {},
    "outputs": [
@@ -1491,7 +1512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 114,
    "id": "0de578db-8289-41d6-b377-ef645751e33f",
    "metadata": {},
    "outputs": [
@@ -1518,7 +1539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 115,
    "id": "b16c5edb-942b-458c-8e95-25e4e355381e",
    "metadata": {},
    "outputs": [
@@ -1569,7 +1590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 116,
    "id": "977a5fa7-a9d5-4e2e-8a32-8e0331ccfe28",
    "metadata": {},
    "outputs": [
@@ -1588,7 +1609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 117,
    "id": "60d8c2eb-2d8e-4d2c-99bc-9eef8cc53ca0",
    "metadata": {},
    "outputs": [
@@ -1710,7 +1731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 118,
    "id": "b9a66e11-7105-4bb4-be84-041f1a1f3bd2",
    "metadata": {},
    "outputs": [
@@ -1760,7 +1781,9 @@
     "context_vecs = mha(batch)\n",
     "\n",
     "print(context_vecs)\n",
-    "print(\"context_vecs.shape:\", context_vecs.shape)"
+    "print(\"context_vecs.shape:\", context_vecs.shape)\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -1792,7 +1815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 119,
    "id": "110b0188-6e9e-4e56-a988-10523c6c8538",
    "metadata": {},
    "outputs": [
@@ -1892,6 +1915,19 @@
     "\n",
     "print(context_vecs)\n",
     "print(\"context_vecs.shape:\", context_vecs.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "091a20ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "context_length = 1024\n",
+    "d_in, d_out = 768, 768\n",
+    "\n",
+    "mha = MultiHeadAttention(d_in, d_out, context_length, 0.0, num_heads=12)\n"
    ]
   },
   {
@@ -2023,7 +2059,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -2037,7 +2073,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
